[gd_scene load_steps=2 format=3 uid="uid://cx88lgs15cpdr"]

[ext_resource type="Script" path="res://comps/scripts/EffectsComponent.gd" id="1_382xm"]

[node name="EffectsComponent" type="Node3D"]
script = ExtResource("1_382xm")

[node name="DevendoTimer" type="Timer" parent="."]

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="RootTimer" type="Timer" parent="."]
one_shot = true

[node name="SilenceTimer" type="Timer" parent="."]
one_shot = true

[node name="FearTimer" type="Timer" parent="."]
one_shot = true

[node name="ContinuousDamageTimer" type="Timer" parent="."]
one_shot = true

[node name="ContinuousDamagePulse" type="Timer" parent="."]
wait_time = 0.5

[node name="MarkTimer1" type="Timer" parent="."]

[node name="MarkTimer2" type="Timer" parent="."]

[node name="MarkTimer3" type="Timer" parent="."]

[node name="MarkTimer4" type="Timer" parent="."]

[node name="MarkTimer5" type="Timer" parent="."]

[connection signal="timeout" from="DevendoTimer" to="." method="_on_devendo_timer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="timeout" from="RootTimer" to="." method="_on_root_timer_timeout"]
[connection signal="timeout" from="SilenceTimer" to="." method="_on_silence_timer_timeout"]
[connection signal="timeout" from="FearTimer" to="." method="_on_fear_timer_timeout"]
[connection signal="timeout" from="ContinuousDamageTimer" to="." method="_on_continuous_damage_timer_timeout"]
[connection signal="timeout" from="ContinuousDamagePulse" to="." method="_on_continuous_damage_pulse_timeout"]
